docs: add instructions for docker group
The user needs to be in the `docker` group in order to access the Docker
daemon, e.g. for running `docker` commands such as `docker ps`, `docker
run` etc.

Signed-off-by: Eric Thelin <extern.eric.thelin@digg.se>

--- a/docker/WSL.se.adoc
+++ b/docker/WSL.se.adoc
@@ -54,6 +54,13 @@ sudo curl \
 
 Obs: Kom ihåg att när du curlar behöver du använda digg-proxyn!
 
+Lägg till din användare till docker-gruppen:
+[source,bash]
+----
+sudo usermod -aG docker $USER
+----
+Obs: För att ändringarna ska slå igenom behöver du öppna ett nytt login-skal.
+
 == Konfigurera Docker med Proxy
 
 Skapa nödvändig katalog:
